<resources>
    <string name="app_name">PointlessChat</string>

    <string name="hint_first">First Name</string>
    <string name="hint_last">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_again">Retype Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short">Register</string>
    <string name="action_search_user">Search</string>
    <string name="display_header_title">Phish Shows Welcomes:</string>
    <string name="image_description_logo">The Phish Logo</string>

    <!-- Menu/Settings -->
    <string name="action_menu">Menu</string>
    <string name="action_next">Next</string>
    <string name="action_settings">Settings</string>
    <string name="action_settings_themes">Themes</string>
    <string name="action_settings_themes_light">Light</string>
    <string name="action_settings_themes_dark">Dark</string>
    <string name="hint_settings_themes">System Default Theme</string>
    <string name="log_out">Log out</string>




    <string name="action_link">Full Post</string>
    <string name="hint_contact_pending">Pending Contacts</string>
    <string name="hint_contact_pending_sender">Request Sent</string>
    <string name="hint_contact_verified">Verified Contacts</string>
    <string name="hint_new_contact">Find New Contact</string>
    <string name="spin">Spin me</string>

    <string name="title_home">Home</string>
    <string name="title_chat">Chat</string>
    <string name="title_weather">Weather</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_contact_search">Contact Search</string>
    <string name="title_chat_menu">Chat Menu</string>

    <string name="base_url_service">https://team-6-tcss-450-web.herokuapp.com/</string>
    <string name="base_url_auth">https://bjb1998-tcss450-labs-auth.herokuapp.com/</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Weather</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="current_weather_header">Current Weather</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">activity_settings</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="_10_days">7 Days</string>
    <string name="today">Today</string>
    <string name="label_location">Current location</string>

    <!-- Auto Sign in -->
    <string name="switch_sign_in">Stay Signed in</string>
    <string name="keys_shared_prefs">My Auth App Shared Prefs</string>
    <string name="keys_prefs_jwt">Sharded Prefs JWT</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="represents_weather_description">Represents weather description</string>

</resources>
