<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment

        android:id="@+id/navigation_settings"
    android:name="edu.uw.tcss450.group6App.ui.settings.SettingsFragment"
    android:label="@string/action_settings"
    tools:layout="@layout/fragment_settings" />
    <action
        android:id="@+id/action_navigation_settings_to_theme"
        app:destination="@id/navigation_settings_themes" />
    <fragment
        android:id="@+id/navigation_home"
        android:name="edu.uw.tcss450.group6App.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home"/>
    <fragment
        android:id="@+id/navigation_contacts"
        android:name="edu.uw.tcss450.group6App.ui.contacts.ContactsFragment"
        android:label="@string/title_contacts"
        tools:layout="@layout/fragment_contacts" />
    <fragment
        android:id="@+id/navigation_weather"
        android:name="edu.uw.tcss450.group6App.ui.weather.WeatherFragment"
        android:label="@string/title_weather"
        tools:layout="@layout/fragment_weather" />
    <fragment
        android:id="@+id/navigation_chat"
        android:name="edu.uw.tcss450.group6App.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_settings_themes"
        android:name="edu.uw.tcss450.group6App.ui.settings.ThemeFragment"
        android:label="fragment_theme"
        tools:layout="@layout/fragment_themes" />

</navigation>