<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.contacts.ContactsFragment">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="2dp"
        android:text="@string/hint_contact_verified"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/contacts_verified_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contacts_pending_container"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="3dp"
        android:text="@string/hint_contact_pending"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/contacts_pending_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_new_contact"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contacts_pending_container"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_new_contact">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_contacts_pending"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/fragment_contact_pending" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button_new_contact"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="3dp"
        android:text="@string/hint_new_contact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contacts_verified_container"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/contacts_pending_container"
        tools:layout_editor_absoluteX="2dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_contacts_verified"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/fragment_contact_verified" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>